Scala CNV coverage part of the pipeline (#4)
* Scala CNV pipeline restructuring

* Coverage pipeline

* Updates to shell script

* Changed CoveragePipeline to object

* Fixes to coverage_pipeline (resuming,hdfs)

* Fixes to coverage_pipeline (resuming,hdfs)

* Fixes to coverage_pipeline (sample download+memory tuning)

* Fixes to coverage_pipeline (enabling Hive support)

* Fixes to coverage_pipeline (change output format to parquet+gzip)

* Fixes to coverage_pipeline (added more verbose logging+sanity checks after writing a Hive partition)

* Fixes to coverage_pipeline (added more verbose logging+sanity checks after writing a Hive partition)

* Fixes to coverage_pipeline (sanit check fix)

* Fixes to coverage_pipeline (loglvl fix)

* Fixes to coverage_pipeline (local cleanup)

* Fixes to coverage_pipeline (ftp connection reset fix)

* Fixes to coverage_pipeline (ftp connection reset fix)

* Fixes to coverage_pipeline (ftp connection reset fix)

* Fixes to coverage_pipeline (ftp connection reset fix)

* Fixes to coverage_pipeline (added checkpointing)

* Fixes to coverage_pipeline (added checkpointing)

* Fixes to coverage_pipeline (added checkpointing-appending)

* Main loop redesign

* exome_targets table DDL

* Fix to Jenkinsfile